--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,14 +20,14 @@
     <meta name="color:Link" content="#099"/>
     <title>{{site.name}}</title>
     <meta name="description" content="{{site.description}}">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="{{BASE_PATH}}/favicon.ico">
     <link rel="alternate" type="application/rss+xml" href="{RSS}">
       <link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic' rel='stylesheet' type='text/css'>
     <meta name=viewport content='width=device-width, initial-scale=1'>
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="{{BASE_PATH}}/css/main.css">
 </head>
 <body>
 
