fixed absolute path

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <article class='post {{post.type}}'>
-<h2><a href='{{post.url}}' class='post-title'>{{ page.title }}</a></h2>
+<h2><a href='{{site.url}}{{post.url}}' class='post-title'>{{ page.title }}</a></h2>
 {{ content }}
 </article>
